ARROW-2026: [C++] Enforce use_deprecated_int96_timestamps to all timestamps fields.

This changed the behavior of use_deprecated_int96_timestamps to support
all timestamp fields irregardless of the time unit. It would previously
only apply this conversion to fields with Nanosecond resolution.

People will only use this option when they use a system that only
supports INT96 timestamps, systems that also support INT64 timestamps in
other resolutions would not need the option.

A notable API change is that this option now take precedence over the
coerce_timestamps option.